2010-01-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	`save-excursion' had no effect because of the following
	`set-buffer'. This is fixed so that `save-excursion' saves the
	state of `temp-buffer'.
	(twittering-get-response-header): Likewise.
	(twittering-get-response-body): Likewise.
	(twittering-tinyurl-get): Likewise.
	(twittering-tinyurl-get): `buffer' are killed even if
	`search-forward-regexp' fails.

2010-01-08  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-percent-encode): bug fix:
	'\n','\r','\t' were not encoded correctly.

2010-01-08  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-use-show-minibuffer-length): Add
	suggestion into a docstring.

2010-01-08  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-status-not-blank-p): bug fix:
	always return nil with strings with trailing newline.

2010-01-07  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-url-reserved-p): bug fix: some
	reserved characters considered unreserved. Thanks to IMAI
	Toshiyuki
	(twittering-cert-file): add
	(twittering-ensure-ca-cert): generate temporary file for CA certificate

2010-01-06  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-default-sentinel): Move
	`debug-printf' to outside of `unwind-protect' because we expect
	that mostly code of this function should be executed by way of
	BODYFORM of `unwind-protect', not UNWINDFORM.
	(twittering-http-post-default-sentinel): Likewise.

	* twittering-mode.el (twittering-http-get-list-index-sentinel): Add 
	`debug-printf' same as `twittering-http-get-default-sentinel'.

	* twittering-mode.el (twittering-status-not-blank-p): Fix and
	modify a regexp pattern.

2010-01-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el
	(twittering-read-timeline-spec-with-completion): return nil for